# mel-cepstral-distance

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  codecov.yml
experiments/: README.md  find_silence_threshold.ipynb  report.MCD.md  report.PEN.md  report.intelligibility.Kendall_tau.md  report.intelligibility.Pearson.md  report.intelligibility.Spearman.md  report.naturalness.Kendall_tau.md  report.naturalness.Pearson.md  report.naturalness.Spearman.md  requirements.txt  run_experiments.py
src/mel_cepstral_distance/: __init__.py  alignment.py  api.py  computation.py  helper.py  silence.py
src/mel_cepstral_distance_tests/: conftest.py
src/mel_cepstral_distance_tests/alignment_tests/: test_align_2d_sequences_using_dtw.py  test_fill_with_zeros_2d.py
src/mel_cepstral_distance_tests/api_tests/: test_compare_amplitude_spectrograms.py  test_compare_audio_files.py  test_compare_mel_spectrograms.py  test_compare_mfccs.py  test_get_amplitude_spectrogram.py  test_get_mel_spectrogram.py  test_get_mfccs.py
src/mel_cepstral_distance_tests/computation_tests/: test_adjust_win_len_to_n_fft.py  test_component.py  test_get_MCD_k.py  test_get_MC_X_ik.py  test_get_X_km.py  test_get_X_kn.py  test_get_average_MCD.py  test_get_w_n_m.py
src/mel_cepstral_distance_tests/helper_tests/: test_hz_to_mel.py  test_mel_to_hz.py
